feat: 環境に必要なエンドポイントは個別に実装するよう変更
